--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,9 @@ nav ul, footer ul {
     list-style: none;
     font-weight: bold;
 }
+ul {
+    color: black;
+}
 nav ul li, footer ul li {
     display: inline;
     margin-right: 20px;
